coneccion de base de datos en clever cloud

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bnw4nsactvtxlhijrkr1-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=monopoly_attendance
-DB_USERNAME=root
-DB_PASSWORD=1234
+DB_DATABASE=bnw4nsactvtxlhijrkr1
+DB_USERNAME=u7xcbg0zym9pquju
+DB_PASSWORD=S4HNdBjggT2HL77zxQkz
